37 - store, state, oop refactoring

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,16 @@
         "rerender",
         "rerender entire tree",
         "tree"
+    ],
+    "cSpell.words": [
+        "Boltus",
+        "Dimon",
+        "Dukui",
+        "Fanja",
+        "Gippik",
+        "Yofff",
+        "coooollll",
+        "gogogogo",
+        "waaaaaaiiiitt"
     ]
 }
