49 add Users + users-redux

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,14 @@
 {
     "cSpell.ignoreWords": [
+        "ac",
+        "chervonograd",
         "entire",
+        "kyiv",
         "rerender",
         "rerender entire tree",
-        "tree"
+        "tree",
+        "unfollow",
+        "unfollow ac"
     ],
     "cSpell.words": [
         "Boltus",
