--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,8 +4,11 @@
         "chervonograd",
         "entire",
         "kyiv",
+        "props",
         "rerender",
         "rerender entire tree",
+        "rest",
+        "rest props",
         "tree",
         "unfollow",
         "unfollow ac"
